# Savings-ladder

./: .gitignore  README.md  SETUP_GUIDE.md
savings-ladder-frontend/: .env.local.example  Vercel.json  next.config.js  package-lock.json  package.json  tailwind.config.js
savings-ladder-frontend/app/: globals.css  layout.tsx  page.tsx
savings-ladder-frontend/app/create-group/: page.tsx
savings-ladder-frontend/app/dashboard/: page.tsx
savings-ladder-frontend/app/group/[id]/: page.tsx
savings-ladder-frontend/app/lib/: idl.ts  solana.ts  supabase.ts
savings-ladder-frontend/app/providers/: ThemeProvider.tsx  WalletProvider.tsx
savings-ladder-program/: Anchor.toml  deploy.sh
savings-ladder-program/programs/savings_ladder/: Cargo.toml
savings-ladder-program/programs/savings_ladder/src/: lib.rs
savings-ladder-supabase/: schema.sql
