[package]
name = "savings-ladder"
version = "0.1.0"
description = "SavingsLadder - Group Savings on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "savings_ladder"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
